# hookaml

./: Makefile  README.md  dune  dune-project  gitst.ml  hookaml.ml  hookaml.opam  ppx_sexp_light.ml  sexp_light.ml  sexp_light_inline_tests.ml  substring.ml  substring_inline_tests.ml  w.py  w.sexp  w.sh
.github/workflows/: ci.yml
tests.t/: run.t  workspace.sexp
usage/: dune
usage/basics.t/: run.t  workspace.sexp
usage/defintitions.t/: def.sexp  run.t
usage/filters.t/: contains.sexp  ends_with.sexp  run.t  starts_with.sexp  workspace.sexp
usage/log.t/: last_commits.sexp  run.t
