(executable
 (public_name gitst)
 (name gitst)
 (modules gitst)
 (libraries sexp_light substring unix)
 (preprocess
  (pps ppx_sexp_conv)))

(library
 (name sexp_light)
 (modules sexp_light)
 (libraries))

(library
 (name sexp_light_inline_tests)
 (modules sexp_light_inline_tests)
 (libraries sexp_light)
 (inline_tests)
 (preprocess
  (pps ppx_expect)))

(library
 (name substring)
 (modules substring)
 (inline_tests)
 (preprocess
  (pps ppx_expect))
 (libraries))
